# -challenge_cup_task_template

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  package.xml  run.sh
docs/: Task 3 - action FSM.md  Task 3 - perception pipeline.md
docs/scene1/: README.md  development-notes-fr.md  technical-plan-zh.md
scripts/: challenge_task.py  scene1_task.py  scene2_perception.py  scene2_task.py  scene3_task.py
scripts/scene1/: __init__.py  actions.py  config.py  perception.py  wrist_refine.py
src/: perception_api.py  robot_api.py  robot_api1.py  robot_api3.py
